[gd_scene load_steps=2 format=3 uid="uid://5qb7776ol4il"]

[ext_resource type="Script" path="res://scenes/utilities/main_menu.gd" id="1_issqy"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_issqy")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -406.0
offset_top = -197.5
offset_right = -242.0
offset_bottom = 197.5
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 41
text = "New"

[node name="Load" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 41
text = "Load"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 41
text = "Options"

[connection signal="button_up" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Load" to="." method="_on_load_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_button_up"]
